--- a/fontend/pages/index.html
+++ b/fontend/pages/index.html
@@ -27,10 +27,10 @@
         <button id="botonContacto">Contáctame!</button>
       </div>
       <div id="imgHome">
-        <img src="../../assets/Home/Mi foto B-N.png" alt="Imagen de perfil" />
+        <img src="../assets/Home/Mi foto B-N.png" alt="Imagen de perfil" />
       </div>
     </div>
-
+    <span class="mkdf-team-position">hello <br> word</span>
     <div id="SobreMiDiv">
       <div id="sobreMiTitulo">
         <h3>Sobre mí</h3>
@@ -38,7 +38,7 @@
       <div id="sobreMiTexto">
         <div id="icon">
           <img
-            src="../../assets/svg/Diseño_sin_título-Photoroom-removebg-preview.png"
+            src="../assets/svg/Diseño_sin_título-Photoroom-removebg-preview.png"
             alt=""
           />
         </div>
@@ -63,46 +63,42 @@
       <div id="proyectos">
         <div class="carta">
           <div class="cartaimagen">
-            <img src="../../assets/projects/booklive1.png" alt="" />
+            <img src="../assets/projects/booklive1.png" alt="" />
           </div>
           <div class="cartaContenido">
             <h3>Booklive</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-              Architecto vero ullam, voluptatibus alias eveniet vitae maxime
-              placeat hic aut distinctio, reiciendis dolorem itaque eum
-              provident veritatis sed ipsam similique. Possimus.
-            </p>
-            <div class="imgDiv">
-              <img src="../../assets/svg/html black.svg" alt="" id="htmlImg" />
-              <img src="../../assets/svg/css black.svg" alt="" id="cssImg" />
-              <img
-                src="../../assets/svg/javascript black.svg"
-                alt=""
-                id="javascriptImg"
-              />
-              <img
-                src="../../assets/svg/nodejs black.svg"
-                alt=""
-                id="nodejsImg"
-              />
-              <img
-                src="../../assets/svg/mysql black.svg"
-                alt=""
-                id="mysqlImg"
-              />
-            </div>
-            <div class="botonesDiv">
-              <button class="botonProyecto" id="botonUno">Visualizar</button>
-              <button class="botonProyecto">
-                <a href="https://github.com/DiegoGp227/Book-Live">Código</a>
-              </button>
+            <p>aplicación web para lectores, con validaciones de ususarios</p>
+            <div class="fondoCarta">
+              <div class="imgDiv">
+                <img src="../assets/svg/html black.svg" alt="" id="htmlImg" />
+                <img src="../assets/svg/css black.svg" alt="" id="cssImg" />
+                <img
+                  src="../assets/svg/javascript black.svg"
+                  alt=""
+                  id="javascriptImg"
+                />
+                <img
+                  src="../assets/svg/nodejs black.svg"
+                  alt=""
+                  id="nodejsImg"
+                />
+                <img src="../assets/svg/mysql black.svg" alt="" id="mysqlImg" />
+              </div>
+              <div class="botonesDiv">
+                <button class="botonProyecto" id="botonUno">Visualizar</button>
+                <button
+                  class="botonProyecto"
+                  onclick="window.location.href='https://github.com/DiegoGp227/Book-Live'"
+                >
+                  Código
+                </button>
+              </div>
             </div>
           </div>
         </div>
         <div class="carta">
           <div class="cartaimagen">
-            <img src="../../assets/projects/Time Track.png" alt="" />
+            <img src="../assets/projects/Time Track.png" alt="" />
           </div>
           <div class="cartaContenido">
             <h3>Time Track</h3>
@@ -112,30 +108,31 @@
               placeat hic aut distinctio, reiciendis dolorem itaque eum
               provident veritatis sed ipsam similique. Possimus.
             </p>
-            <div class="imgDiv">
-              <img src="../../assets/svg/html black.svg" alt="" id="htmlImg" />
-              <img src="../../assets/svg/css black.svg" alt="" id="cssImg" />
-              <img
-                src="../../assets/svg/javascript black.svg"
-                alt=""
-                id="javascriptImg"
-              />
-              <img
-                src="../../assets/svg/nodejs black.svg"
-                alt=""
-                id="nodejsImg"
-              />
-              <img
-                src="../../assets/svg/mysql black.svg"
-                alt=""
-                id="mysqlImg"
-              />
-            </div>
-            <div class="botonesDiv">
-              <button class="botonProyecto" id="botonUno">Visualizar</button>
-              <button class="botonProyecto">
-                <a href="https://github.com/DiegoGp227/Time-Tracker">Código</a>
-              </button>
+            <div class="fondoCarta">
+              <div class="imgDiv">
+                <img src="../assets/svg/html black.svg" alt="" id="htmlImg" />
+                <img src="../assets/svg/css black.svg" alt="" id="cssImg" />
+                <img
+                  src="../assets/svg/javascript black.svg"
+                  alt=""
+                  id="javascriptImg"
+                />
+                <img
+                  src="../assets/svg/nodejs black.svg"
+                  alt=""
+                  id="nodejsImg"
+                />
+                <img src="../assets/svg/mysql black.svg" alt="" id="mysqlImg" />
+              </div>
+              <div class="botonesDiv">
+                <button class="botonProyecto" id="botonUno">Visualizar</button>
+                <button
+                  class="botonProyecto"
+                  onclick="window.open('https://github.com/DiegoGp227/Book-Live', '_blank')"
+                >
+                  Código
+                </button>
+              </div>
             </div>
           </div>
         </div>
@@ -148,7 +145,7 @@
         <div class="logos">
           <div class="contenedorHabilidades">
             <img
-              src="../../assets/svg/html hover.svg"
+              src="../assets/svg/html hover.svg"
               alt=""
               class="imagenPrueba"
             />
@@ -156,7 +153,7 @@
           </div>
           <div class="contenedorHabilidades">
             <img
-              src="../../assets/svg/css hover.svg"
+              src="../assets/svg/css hover.svg"
               alt=""
               class="imagenPrueba"
             />
@@ -164,7 +161,7 @@
           </div>
           <div class="contenedorHabilidades">
             <img
-              src="../../assets/svg/javascript hover.svg"
+              src="../assets/svg/javascript hover.svg"
               alt=""
               class="imagenPrueba"
             />
@@ -172,7 +169,15 @@
           </div>
           <div class="contenedorHabilidades">
             <img
-              src="../../assets/svg/tailwindcss hover.svg"
+              src="../assets/svg/reactjs hover.svg"
+              alt=""
+              class="imagenPrueba"
+            />
+            <p>React Js</p>
+          </div>
+          <div class="contenedorHabilidades">
+            <img
+              src="../assets/svg/tailwindcss hover.svg"
               alt=""
               class="imagenPrueba"
             />
@@ -180,7 +185,7 @@
           </div>
           <div class="contenedorHabilidades">
             <img
-              src="../../assets/svg/nodejs hover.svg"
+              src="../assets/svg/nodejs hover.svg"
               alt=""
               class="imagenPrueba"
             />
@@ -188,7 +193,7 @@
           </div>
           <div class="contenedorHabilidades">
             <img
-              src="../../assets/svg/mysql hover.svg"
+              src="../assets/svg/mysql hover.svg"
               alt=""
               class="imagenPrueba"
             />
@@ -196,7 +201,7 @@
           </div>
           <div class="contenedorHabilidades">
             <img
-              src="../../assets/svg/github hover.svg"
+              src="../assets/svg/github hover.svg"
               alt=""
               class="imagenPrueba"
             />
@@ -204,7 +209,7 @@
           </div>
           <div class="contenedorHabilidades">
             <img
-              src="../../assets/svg/figma hover.svg"
+              src="../assets/svg/figma hover.svg"
               alt=""
               class="imagenPrueba"
             />
@@ -216,7 +221,41 @@
 
     <div id="contactameDiv">
       <h3>Contáctame</h3>
-      
+      <div id="contactameMain">
+        <div id="redesDiv">
+          <h4>Mis Redes</h4>
+          <div class="logoTextoDiv">
+            <img src="../assets/svg/linkedin hover.svg" alt="" class="redesImg"/>
+            <a href="https://linkedin.com/in/diego-gongora-p" target="_blank" class="linksRedes">diego-gongora</a>
+          </div>
+          <div class="logoTextoDiv">
+            <img src="../assets/svg/github hover.svg" alt="" class="redesImg"/>
+            <a href="https://github.com/DiegoGp227" target="_blank" class="linksRedes">DiegoGp227</a>
+          </div>
+          <div class="logoTextoDiv">
+            <img src="../assets/svg/gmail hover.svg" alt="" class="redesImg"/>
+            <a href="https://mail.google.com/mail/?view=cm&fs=1&to=diego.gp227@gmail.com" target="_blank" class="linksRedes">diego.gp227@gmail.com</a>
+          </div>
+        </div>
+        <div id="forumularioContactoDiv">
+          <h4>Dejame un mensaje</h4>
+          <div id="formMain">
+            <form action="" class="formActivity">
+              <label for=""style="color: aliceblue">Nombre</label>
+              <input type="text">
+  
+              <label for=""style="color: aliceblue">Correo</label>
+              <input type="email">
+  
+              <label for=""style="color: aliceblue" >Mensaje</label>
+              <!-- <textarea type="text" id="mensaje"> -->
+              <textarea name="mensaje" id="mensaje"></textarea>
+
+              <button type="submit">Enviar</button>
+            </form>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
