--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Diego Góngora</title>
-    <link rel="stylesheet" href="../styles/nav.css" />
-    <link rel="stylesheet" href="../styles/global.css" />
-    <link rel="stylesheet" href="../styles/style.css" />
+    <link rel="stylesheet" href="./fontend/styles/nav.css" />
+    <link rel="stylesheet" href="./fontend/styles/global.css" />
+    <link rel="stylesheet" href="./fontend/styles/style.css" />
   </head>
   <body>
     <nav>
