Descripcion biografia actualizada

--- a/index.html
+++ b/index.html
@@ -45,15 +45,8 @@
         </div>
         <div id="texto">
           <p>
-            Soy un desarrollador web apasionado por la creación de soluciones
-            digitales innovadoras. Actualmente, estoy trabajando en un
-            portafolio en línea donde presento mis proyectos y habilidades. Mi
-            experiencia incluye el dominio de JavaScript, y tengo planes de
-            seguir aprendiendo y expandiendo mis conocimientos para convertirme
-            en un experto en el desarrollo web. Además, estoy en proceso de
-            crear aplicaciones como una aplicación de finanzas y una aplicación
-            de gestión de tareas, lo que me permite perfeccionar mis habilidades
-            en el diseño y desarrollo de interfaces interactivas y funcionales.
+            Desarrollador Web Frontend con experiencia en HTML, CSS y JavaScript, además de estar en proceso de aprendizaje de React JS. He trabajado en proyectos desarrollados con WordPress, donde adquirí habilidades prácticas en diseño y funcionalidad web. Estoy comprometido con seguir aprendiendo y afianzando mis conocimientos, explorando nuevas bibliotecas y frameworks para construir interfaces modernas, funcionales y centradas en el usuario. <br>
+            Busco oportunidades que me permitan contribuir con mi experiencia y crecer profesionalmente en equipos innovadores.            
           </p>
         </div>
       </div>
