[ style ] The animation of the project cards was changed, and two more technologies were added to my skills.

--- a/index.html
+++ b/index.html
@@ -45,13 +45,19 @@
         </div>
         <div id="texto">
           <p>
-            Desarrollador Web Frontend con experiencia en HTML, CSS y JavaScript, además de estar en proceso de aprendizaje de React JS. He trabajado en proyectos desarrollados con WordPress, donde adquirí habilidades prácticas en diseño y funcionalidad web. Estoy comprometido con seguir aprendiendo y afianzando mis conocimientos, explorando nuevas bibliotecas y frameworks para construir interfaces modernas, funcionales y centradas en el usuario. <br>
-            Busco oportunidades que me permitan contribuir con mi experiencia y crecer profesionalmente en equipos innovadores.            
+            Desarrollador Web Frontend con experiencia en HTML, CSS y
+            JavaScript, además de estar en proceso de aprendizaje de React JS.
+            He trabajado en proyectos desarrollados con WordPress, donde adquirí
+            habilidades prácticas en diseño y funcionalidad web. Estoy
+            comprometido con seguir aprendiendo y afianzando mis conocimientos,
+            explorando nuevas bibliotecas y frameworks para construir interfaces
+            modernas, funcionales y centradas en el usuario. <br />
+            Busco oportunidades que me permitan contribuir con mi experiencia y
+            crecer profesionalmente en equipos innovadores.
           </p>
         </div>
       </div>
     </div>
-
     <div id="misProyectosDiv">
       <h3>Mis proyectos</h3>
       <div id="proyectos">
@@ -71,27 +77,27 @@
                 <img
                   src="./fontend/assets/svg/html black.svg"
                   alt=""
-                  id="htmlImg"
+                  class="htmlImg"
                 />
                 <img
                   src="./fontend/assets/svg/css black.svg"
                   alt=""
-                  id="cssImg"
+                  class="cssImg"
                 />
                 <img
                   src="./fontend/assets/svg/javascript black.svg"
                   alt=""
-                  id="javascriptImg"
+                  class="javascriptImg"
                 />
                 <img
                   src="./fontend/assets/svg/nodejs black.svg"
                   alt=""
-                  id="nodejsImg"
+                  class="nodejsImg"
                 />
                 <img
                   src="./fontend/assets/svg/mysql black.svg"
                   alt=""
-                  id="mysqlImg"
+                  class="mysqlImg"
                 />
               </div>
               <div class="botonesDiv">
@@ -122,27 +128,27 @@
                 <img
                   src="./fontend/assets/svg/html black.svg"
                   alt=""
-                  id="htmlImg"
+                  class="htmlImg"
                 />
                 <img
                   src="./fontend/assets/svg/css black.svg"
                   alt=""
-                  id="cssImg"
+                  class="cssImg"
                 />
                 <img
                   src="./fontend/assets/svg/javascript black.svg"
                   alt=""
-                  id="javascriptImg"
+                  class="javascriptImg"
                 />
                 <img
                   src="./fontend/assets/svg/nodejs black.svg"
                   alt=""
-                  id="nodejsImg"
+                  class="nodejsImg"
                 />
                 <img
                   src="./fontend/assets/svg/mysql black.svg"
                   alt=""
-                  id="mysqlImg"
+                  class="mysqlImg"
                 />
               </div>
               <div class="botonesDiv">
@@ -174,32 +180,32 @@
                 <img
                   src="./fontend/assets/svg/html black.svg"
                   alt=""
-                  id="htmlImg"
+                  class="htmlImg"
                 />
                 <img
                   src="./fontend/assets/svg/css black.svg"
                   alt=""
-                  id="cssImg"
+                  class="cssImg"
                 />
                 <img
                   src="./fontend/assets/svg/javascript black.svg"
                   alt=""
-                  id="javascriptImg"
+                  class="javascriptImg"
                 />
                 <img
                   src="./fontend/assets/svg/reactjs black.svg"
                   alt=""
-                  id="reactjsImg"
+                  class="reactjsImg"
                 />
                 <img
                   src="./fontend/assets/svg/nodejs black.svg"
                   alt=""
-                  id="nodejsImg"
+                  class="nodejsImg"
                 />
                 <img
                   src="./fontend/assets/svg/mysql black.svg"
                   alt=""
-                  id="mysqlImg"
+                  class="mysqlImg"
                 />
               </div>
               <div class="botonesDiv">
@@ -207,6 +213,68 @@
                 <button
                   class="botonProyecto"
                   onclick="window.open('https://github.com/DiegoGp227/Next-Stepper', '_blank')"
+                >
+                  Código
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="carta">
+          <div class="cartaImagen">
+            <img src="./fontend/assets/projects/Time Track.png" alt="" />
+          </div>
+          <div class="cartaContenido">
+            <h3>notte</h3>
+            <p>Aplicacion para anotar las ideas</p>
+            <div class="fondoCarta">
+              <div class="imgDiv">
+                <img
+                  src="./fontend/assets/svg/html black.svg"
+                  alt=""
+                  class="htmlImg"
+                />
+                <img
+                  src="./fontend/assets/svg/css black.svg"
+                  alt=""
+                  class="cssImg"
+                />
+                <img
+                  src="./fontend/assets/svg/javascript black.svg"
+                  alt=""
+                  class="javascriptImg"
+                />
+                <img
+                  src="./fontend/assets/svg/reactjs black.svg"
+                  alt=""
+                  class="reactjsImg"
+                />
+                <img
+                  src="./fontend/assets/svg/astro black.svg"
+                  alt=""
+                  class="astroImg"
+                />
+                <img
+                  src="./fontend/assets/svg/bun black.svg"
+                  alt=""
+                  class="bunImg"
+                />
+                <img
+                  src="./fontend/assets/svg/elysia black.svg"
+                  alt=""
+                  class="elysiaImg"
+                />
+                <img
+                  src="./fontend/assets/svg/mysql black.svg"
+                  alt=""
+                  class="mysqlImg"
+                />
+              </div>
+              <div class="botonesDiv">
+                <!-- <button class="botonProyecto" id="botonUno">Visualizar</button> -->
+                <button
+                  class="botonProyecto"
+                  onclick="window.open('https://github.com/DiegoGp227/Book-Live', '_blank')"
                 >
                   Código
                 </button>
@@ -255,11 +323,19 @@
           </div>
           <div class="contenedorHabilidades">
             <img
-              src="./fontend/assets/svg/tailwindcss hover.svg"
+              src="./fontend/assets/svg/typescript hover.svg"
               alt=""
               class="imagenPrueba"
             />
-            <p>Tailwind</p>
+            <p>Typescript</p>
+          </div>
+          <div class="contenedorHabilidades">
+            <img
+              src="./fontend/assets/svg/astro hover white.svg"
+              alt=""
+              class="imagenPrueba"
+            />
+            <p>Astro</p>
           </div>
           <div class="contenedorHabilidades">
             <img
@@ -268,6 +344,14 @@
               class="imagenPrueba"
             />
             <p>Node.js</p>
+          </div>
+          <div class="contenedorHabilidades">
+            <img
+              src="./fontend/assets/svg/express hover.svg"
+              alt=""
+              class="imagenPrueba"
+            />
+            <p>Express</p>
           </div>
           <div class="contenedorHabilidades">
             <img
